--- a/ProjetExercices/app/src/main/res/layout/activity_main.xml
+++ b/ProjetExercices/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".MainActivity">
+            tools:context=".MainActivity"
+            android:background="#221F1F">
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/my_toolbar"
@@ -31,7 +32,7 @@
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/navigation_view"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="start"
             app:menu="@menu/navigation_drawer_menu"/>
 
