--- a/Examen3/app/src/main/res/layout/activity_lister.xml
+++ b/Examen3/app/src/main/res/layout/activity_lister.xml
@@ -11,12 +11,13 @@
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:theme="@style/Theme.AppCompat.DayNight"
+        android:background="@color/black"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@id/my_recyclerView"
-        android:theme="@style/Theme.AppCompat.DayNight"
-        android:background="@color/black"/>
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/my_recyclerView"
